# boiler

./: .gitignore  .gitignore.swp  .gitmodules  .projectile  .ycm_extra_conf.py  CMakeLists.txt  README.md  build  clean  ctags_update  debug  doxygen.config  engine.cbp  triptych.cbp
android/ndk/: build.sh  clean.sh
art/: ground.ase
cmake/: FindBoiler.cmake  FindGSL.cmake  FindSDL2.cmake
data/: basic tiles.psd  big_layers.json  bubbles.json  bubbles.tps  demo_city.tmx  demo_map.tmx  fonts  kof.json  marathon.json  marathon.tps  random.json  shader.frag  shader.vert  terrain.json  terrain.tps  test_map.tmx  tiles.json  tiles.tps  triptych.json  triptych.tps  zodas2.json
data/shaders/: basic.frag  basic.vert  shader.frag  shader.vert  text.frag
data/test_map/: demo_map.tmx  test_map2.tmx
data/tiles/: Horror City - !DoorsA.tsx  Horror City - PHC-A4-Interior.tsx  Horror City - TileA5_PHC_Interior-Apartments.tsx
doc/: camera.org  libs
include/: boiler.h
include/animation/: animation.h  animationsampler.h  animator.h  channel.h  clip.h  common.h
include/assets/: assetset.h  gltfimporter.h  gltfmodel.h  importresult.h
include/camera/: camera.h  cameracomponent.h  camerasystem.h  pancamera.h  platformercamera.h
include/collision/: collisioncomponent.h  collisionsystem.h
include/containers/: array2d.h  gridposition.h
include/core/: asset.h  assetmanager.h  base64.h  bmfont.h  boiler.h  common.h  component.h  componentmapper.h  componentstore.h  componentsystems.h  componenttype.h  ecstypes.h  engine.h  entity.h  entitycomponentsystem.h  entitystate.h  entityworld.h  fileutils.h  frameinfo.h  glyphloader.h  lightsourceid.h  line.h  logdestination.h  logentry.h  logger.h  materialid.h  math.h  matrixcache.h  messagedispatch.h  part.h  quadtree.h  ray.h  raycaster.h  rect.h  rendersystem.h  size.h  spacialhash.h  spriteanimation.h  spriteframe.h  spriteloader.h  (+9 more)
include/display/: alphamode.h  glyph.h  glyphmap.h  lightsource.h  material.h  materialgroup.h  mesh.h  model.h  opengl.h  openglrenderer.h  primitive.h  primitivetype.h  renderer.h  rendermatrices.h  skyboxloader.h  spvshaderprogram.h  texture.h  textureinfo.h  vertexdata.h  viewprojection.h  vulkanrenderer.h
include/gui/: guihandler.h  imguihandler.h  imguivulkan.h
include/input/: inputcomponent.h  inputevent.h  inputlistener.h  inputsystem.h  keyinputevent.h  keys.h  mousebuttonevent.h  mousemotionevent.h  touchmotionevent.h  touchtapevent.h
include/json/: jsonloader.h
include/physics/: aabb.h  collidercomponent.h  collisioncomponent.h  collisionsystem.h  movementcomponent.h  movementsystem.h  physicscomponent.h  (+3 more)
libs/: CMakeLists.txt
libs/SDL2_image-2.0.4/: Makefile  config.status  libSDL2_image.la  libtool  showimage
libs/SDL2_image-2.0.4/.deps/: IMG.Plo  IMG_ImageIO.Plo  IMG_bmp.Plo  IMG_jpg.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_pnm.Plo  IMG_svg.Plo  IMG_webp.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo  showimage.Po
libs/SDL2_image-2.0.4/.libs/: libSDL2_image-2.0.0.dylib  libSDL2_image.lai  showimage
libs/SDL2_image-2.0.4/.libs/libSDL2_image-2.0.0.dylib.dSYM/Contents/Resources/DWARF/: libSDL2_image-2.0.0.dylib
libs/freetype-2.10.1/builds/amiga/: README  makefile  makefile.os4  smakefile
libs/freetype-2.10.1/builds/amiga/include/config/: ftconfig.h  ftmodule.h
libs/freetype-2.10.1/builds/amiga/src/base/: ftsystem.c
libs/freetype-2.10.1/builds/atari/: README.TXT
libs/freetype-2.11.0/builds/amiga/: README  makefile  makefile.os4  smakefile
libs/freetype-2.11.0/builds/amiga/include/config/: ftconfig.h  ftmodule.h
libs/freetype-2.11.0/builds/amiga/src/base/: ftsystem.c
libs/freetype-2.11.0/builds/atari/: README.TXT
libs/glew-2.1.0/: glew.pc
libs/glew-2.1.0/auto/src/: glew.rc  glewinfo.rc  visualinfo.rc
libs/glm-0.9.9.8/glm/gtx/: matrix_factorisation.inl
libs/glm-0.9.9.8/test/gtc/: gtc_quaternion.cpp
libs/zlib-1.2.11/contrib/dotzlib/DotZLib/: ChecksumImpl.cs  CircularBuffer.cs  CodecBase.cs  Deflater.cs  DotZLib.cs  GZipStream.cs  Inflater.cs
src/: _gamepart.cpp  bmfont.cpp  camera.cpp  camera.h  component.cpp  component.h  engine.cpp  engine.h  entity.cpp  entity.h  gamepart.cpp  gamepart.h  line.cpp  line.h  main.cpp  opengl.h  openglrenderer.cpp  openglrenderer.h  opengltexture.cpp  part.cpp  part.h  platformercamera.cpp  platformercamera.h  playerstandstate.h  quadtree.cpp  quadtree.h  raycaster.cpp  raycaster.h  rect.cpp  rect.h  renderer.cpp  renderer.h  sdl_util.h  shaderprogram.cpp  shaderprogram.h  spacialhash.h  spriteanimation.cpp  spriteanimation.h  spriteloader.cpp  spriteloader.h  (+9 more)
src/boiler/: CMakeLists.txt  boiler.h
src/boiler/camera/: camera.cpp  camera.h  pancamera.cpp  pancamera.h  platformercamera.cpp  platformercamera.h
src/boiler/containers/: array2d.h  gridposition.cpp
src/boiler/core/: base64.cpp  bmfont.cpp  bmfont.h  boiler.cpp  boiler.h  component.cpp  component.h  componentmapper.h  componentsystems.h  engine.cpp  engine.h  entity.cpp  entity.h  entitycomponentsystem.h  entitystate.h  entityworld.cpp  entityworld.h  fileutils.cpp  fileutils.h  line.cpp  part.cpp  part.h  quadtree.cpp  ray.cpp  ray.h  raycaster.cpp  raycaster.h  rect.cpp  rect.h  rendersystem.h  spriteanimation.cpp  spriteloader.cpp  spriteloader.h  spritesheet.cpp  spritesheet.h  spritesheetframe.cpp  spritesheetframe.h  system.h  systemexecutor.h  tmx.h  (+2 more)
src/boiler/core/components/: positioncomponent.cpp  positioncomponent.h  velocitycomponent.h
src/boiler/input/: inputevent.h  inputlistener.h  keyinputevent.h  keyinputlistener.h  mousebuttonevent.h  mouseinputlistener.h  mousemotionevent.h  touchevent.h  touchtapevent.h
src/boiler/util/: filemanager.cpp  filemanager.h
src/boiler/video/: fontloader.cpp  fontloader.h  imageloader.cpp  imageloader.h  model.cpp  model.h  opengl.h  openglmodel.cpp  openglmodel.h  openglrenderer.cpp  openglrenderer.h  opengltexture.cpp  opengltexture.h  renderer.cpp  renderer.h  shaderprogram.cpp  shaderprogram.h  texture.h  vertexdata.cpp  vertexdata.h
src/boiler/video/systems/: rendersystem.cpp  rendersystem.h
(+301 files in other folders)
